test/classes/initializers/compilerGenerated/pragmaOnly/dflt-ctor-generic-uninit-field-type-err-1.good
dflt-ctor-generic-uninit-field-type-err-1.chpl:8: error: unresolved call 'A.init()'
dflt-ctor-generic-uninit-field-type-err-1.chpl:4: note: candidates are: A.init(type t)
